fix: Fix some inconsistent spacing

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -94,7 +94,7 @@ select {
 
 .list-of-airport {
   text-align: center;
-  padding: 2em 0;
+  padding-top: 2em;
 }
 
 .section-title {
@@ -208,7 +208,7 @@ hr {
   margin-bottom: 1.5em;
 }
 
-.field {
+.field-passenger {
   display: flex;
   flex-direction: column;
   font-size: 0.875rem;
@@ -216,7 +216,7 @@ hr {
   margin: 1em 0;
 }
 
-.field input {
+.field-passenger input {
   height: 2.5em;
   padding: 0.5em;
   font-weight: var(--font-weight-regular);
@@ -286,7 +286,7 @@ hr {
 
 @media only screen and (min-width: 600px) {
   .primary-header {
-    padding: 4em;
+    padding: 2em;
   }
 
   .main-header {
@@ -298,7 +298,7 @@ hr {
   }
 
   .search-result {
-    padding: 3em 0;
+    padding-top: 3em;
   }
 
   .flight-details {
@@ -343,7 +343,7 @@ hr {
     font-size: 1rem;
   }
 
-  .field {
+  .field-passenger {
     font-size: 1rem;
   }
 
